[metadata]
# replace with your username:
name = ImbalancedRegressionSampler-ndai093
version = 0.0.1
author = Ning Dai
author_email = ndai093@uottawa.ca
description = Several utility based sampler for imbalanced learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ndai093/UtilityBasedRegression
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
